# movs-site-backend

./: .gitignore  README.md  document.env  main.py  pyproject.toml  requirements.txt
internal/: abstract.py  auth.py  cloud_storage.py  error.py  flags.py
internal/models/: text.py
routes/: applicants.py  department_info.py  news.py  science_works.py  teachers.py  users.py
schemas/: __init__.py  applicants.py  department_info.py  news.py  science_works.py  teacher.py  user.py
