[tool.poetry]
name = "movs-site"
version = "1.0.0"
description = ""
authors = ["Damego <damego.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.6"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^39.0.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
imagekitio = "^3.0.1"
beanie = "^1.19.2"
motor = "^3.1.2"
urllib3 = "1.26.16"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
